add result api
add result api
